[package]
name    = "nonce-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nonce-bench"
path = "src/main.rs"

[dependencies]
quic-client              = { workspace = true }
tokio                    = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
clap                     = { workspace = true }
anyhow                   = { workspace = true }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true }
bincode                  = { workspace = true }
serde                    = { workspace = true }
rand                     = { workspace = true }
solana-sdk               = { workspace = true }
solana-keypair           = { workspace = true }
solana-signer            = { workspace = true }
solana-pubkey            = { workspace = true }
solana-hash              = { workspace = true }
solana-rpc-client        = { workspace = true }
solana-commitment-config = { workspace = true }
solana-system-interface  = { workspace = true }
solana-compute-budget-interface = { workspace = true }
