[package]
name    = "quic-client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio          = { workspace = true, features = ["rt-multi-thread", "net"] }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
dashmap        = { workspace = true }
tracing        = { workspace = true }
serde          = { workspace = true }
quinn          = { workspace = true }
solana-tls-utils = { workspace = true }
solana-keypair = { workspace = true }
wincode        = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true, features = ["rt-multi-thread", "macros"] }
solana-sdk          = { workspace = true }
solana-rpc-client   = { workspace = true }
solana-system-interface = { workspace = true }
bincode             = { workspace = true }
tracing-subscriber  = { workspace = true }
agave-transaction-view = { workspace = true }
