[package]
name    = "udp-shred-blaster"
version.workspace = true
edition.workspace = true

[[bin]]
name = "udp-shred-blaster"
path = "src/main.rs"

[dependencies]
tokio                   = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
clap                    = { workspace = true }
anyhow                  = { workspace = true }
tracing                 = { workspace = true }
tracing-subscriber      = { workspace = true }
rand                    = { workspace = true }
solana-hash             = { workspace = true }
solana-keypair          = { workspace = true }
solana-pubkey           = { workspace = true }
solana-ledger           = { workspace = true }
solana-entry            = { workspace = true }
solana-system-transaction = { workspace = true }
